MAke code work on Java 11