@@ -12,6 +12,10 @@ allprojects{
     }
 }
 
+tasks.withType<JavaCompile>().configureEach {
+  options.compilerArgs.addAll(listOf("--add-modules", "java.xml"))
+}
+
 dependencies {
     implementation("commons-cli:commons-cli:1.5.0")
 }
